@@ -16,14 +16,16 @@
   </indexterm>
 
   <para>This section discusses how to configure the <command>console</command>
-  bootscript that sets up the keyboard map and the console font. If non-ASCII
-  characters (e.g., the copyright sign, the British pound sign and Euro symbol)
-  will not be used and the keyboard is a U.S. one, skip this section. Without
+  and <command>consolelog</command> bootscripts that set up the keyboard map,
+  console font and console kernel log level. If non-ASCII characters (e.g.,
+  the copyright sign, the British pound sign and Euro symbol) will not be used
+  and the keyboard is a U.S. one, much of this section can be skipped. Without
   the configuration file, the <command>console</command> bootscript will do
   nothing.</para>
 
-  <para>The <command>console</command> script reads the
-  <filename>/etc/sysconfig/console</filename> file for configuration information.
+  <para>The <command>console</command>  and <command>consolelog</command>
+  script reads the <filename>/etc/sysconfig/console</filename> file for
+  configuration information.
   Decide which keymap and screen font will be used. Various language-specific
   HOWTOs can also help with this, see <ulink
   url="http://www.tldp.org/HOWTO/HOWTO-INDEX/other-lang.html"/>. If still in
@@ -36,6 +38,15 @@
   of the form: VARIABLE="value". The following variables are recognized:</para>
 
   <variablelist>
+
+    <varlistentry>
+      <term>LOGLEVEL</term>
+      <listitem>
+        <para>This variable specifies the log level for kernel messages sent
+        to the console as set by <command>dmesg</command>. Valid levels are
+        from "1" (no messages) to "8". The default level is "7".</para>
+      </listitem>
+    </varlistentry>
 
     <varlistentry>
       <term>KEYMAP</term>
